[package]
name = "solany"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27.0"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11.0"
indicatif = "0.17.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
solana-client = "1.10.45"
solana-sdk = "1.10.45"
solana-program = "1.10.45"
mpl-token-metadata = "4.1.1"
